--- a/app/src/main/res/layout/activity_repartidor_main.xml
+++ b/app/src/main/res/layout/activity_repartidor_main.xml
@@ -64,7 +64,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvGreeting"
+                    android:id="@+id/tvWelcome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
