--- a/app/src/main/res/layout/activity_select_rol.xml
+++ b/app/src/main/res/layout/activity_select_rol.xml
@@ -45,13 +45,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/btnRepartidores"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_margin="40dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginBottom="40dp"
             app:cardCornerRadius="12dp"
             app:cardElevation="6dp"
             app:strokeWidth="1dp"
